--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,5 +1,6 @@
 {% set name = "parsevasp" %}
-{% set version = "3.1.0" %}
+{% set version = "3.2.0" %}
+{% set python_version = ">=3.7" %}
 
 package:
   name: {{ name|lower }}
@@ -7,7 +8,7 @@ package:
 
 source:
   url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/parsevasp-{{ version }}.tar.gz
-  sha256: 17ec072af53b628074ca631cf8f7525543604a17883af10f029c494ffd40de26
+  sha256: 3be1dff9b291ba97b3b1874027d8b741db43a9c8d255ce58b12c19d6cf4b98eb
 
 build:
   noarch: python
@@ -17,12 +18,12 @@ build:
 requirements:
   host:
     - pip
-    - python >=3.7
+    - python {{ python_version }}
+    - flit-core >=3.4,<4
   run:
-    - future
     - lxml
     - numpy
-    - python >=3.7
+    - python {{ python_version }}
     - pyyaml
 
 test:
