--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -1,13 +1,13 @@
 {% set name = "parsevasp" %}
 {% set version = "3.2.0" %}
-{% set python_version = ">=3.7" %}
+{% set python_min = "3.10" %}
 
 package:
   name: {{ name|lower }}
   version: {{ version }}
 
 source:
-  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/parsevasp-{{ version }}.tar.gz
+  url: https://pypi.org/packages/source/{{ name[0] }}/{{ name }}/parsevasp-{{ version }}.tar.gz
   sha256: 3be1dff9b291ba97b3b1874027d8b741db43a9c8d255ce58b12c19d6cf4b98eb
 
 build:
@@ -18,12 +18,12 @@ build:
 requirements:
   host:
     - pip
-    - python {{ python_version }}
+    - python {{ python_min }}
     - flit-core >=3.4,<4
   run:
     - lxml
     - numpy
-    - python {{ python_version }}
+    - python >={{ python_min }}
     - pyyaml
 
 test:
@@ -32,6 +32,7 @@ test:
   commands:
     - pip check
   requires:
+    - python {{ python_min }}
     - pip
 
 about:
